# aithena

./: main.py  pyproject.toml
plan/: plan.md
